--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -11,7 +11,7 @@
         content="Admin, Dashboard, Bootstrap3, Sass, transform, CSS3, HTML5, Web design, UI Design, Responsive Dashboard, Responsive Admin, Admin Theme, Best Admin UI, Bootstrap Theme, Themeforest, Bootstrap">
     <meta name="author" content="Bootstrap Gallery">
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>Sunrise Admin Panel, Sunrise Dashboard</title>
+    <title>Byosehano Author | Login</title>
     <link href="{% static 'user/css/login.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'user/css/animate.css' %}" rel="stylesheet" media="screen">
     <link href="{% static 'user/fonts/icomoon/icomoon.css' %}" rel="stylesheet">
@@ -26,7 +26,7 @@
                 <h5>Sign in to continue to your<br>ByoseHano Account.</h5>
             </div>
             <div id="inputs">
-                <div class="form-control"><input type="text" name="username" placeholder="Email"> <i class="icon-email"></i></div>
+                <div class="form-control"><input type="text" name="username" placeholder="Username"> <i class="icon-email"></i></div>
                 <div class="form-control"><input type="password" name="password" placeholder="Password"> <i class="icon-lock2"></i>
                 <input type="hidden" name="next" value="{{ next }}" id="">
                 </div><input type="submit" name="submit" value="Sign In">
