--- a/templates/management/inc/header.html
+++ b/templates/management/inc/header.html
@@ -2,7 +2,7 @@
 <div class="vertical-nav">
     <button class="collapse-menu">
         <i class="icon-dehaze"></i></button>
-    <div class="logo"><a href="index.html"><img src="{% static 'logo.png' %}" alt="Byosehano"></a></div>
+    <div class="logo"><a href="{% url 'web:index' %}"><img src="{% static 'logo.png' %}" alt="Byosehano"></a></div>
     <div class="user-info">
         <div class="user-img"><img src="{% static 'circled-logo.png' %}" alt="User Info"> <span class="likes-info">0</span></div>
         <h5 class="user-name-o">{{ user.username|title }}</h5>
