--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -13,11 +13,10 @@
                 <ul class="unstyled">
                     <li> <a title="Facebook" href="#"> <span class="social-icon"><i class="fa fa-facebook"></i></span>
                         </a> <a title="Twitter" href="#"> <span class="social-icon"><i class="fa fa-twitter"></i></span>
-                        </a> <a title="Google+" href="#"> <span class="social-icon"><i
-                                    class="fa fa-google-plus"></i></span> </a> <a title="Linkdin" href="#"> <span
+                        </a> <a title="Linkdin" href="#"> <span
                                 class="social-icon"><i class="fa fa-linkedin"></i></span> </a> <a title="Rss" href="#">
                             <span class="social-icon"><i class="fa fa-rss"></i></span> </a> <a title="Skype" href="#">
-                            <span class="social-icon"><i class="fa fa-skype"></i></span> </a> </li>
+                            <span class="social-icon"><i class="fa fa-instagram"></i></span> </a> </li>
                 </ul>
             </div>
         </div>
@@ -30,7 +29,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-sm-12">
-                <div class="logo"> <a href="#"> <img src="{% static 'logo.png' %}" alt=""> </a> </div>
+                <div class="logo"> <a href="{% url 'web:index' %}"> <img src="{% static 'logo.png' %}" alt=""> </a> </div>
             </div>
             <div class="col-md-9 col-sm-12 header-right">
                 <div class="ad-banner float-right"> 
