--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-md-9 col-sm-12 header-right">
                 <div class="ad-banner float-right"> 
-                    <a href="#"><img src="http://utouchdesign.com/themes/envato/altroz_news/images/banner-ads/ad-top-header.png"
+                    <a href="#"><img src="https://utouchdesign.com/themes/envato/altroz_news/images/banner-ads/ad-top-header.png"
                             class="img-fluid" alt=""></a> 
                         </div>
             </div>
