--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     <title>Byosehano :: Amakuru - Menya byinshi igihe nyacyo ::</title>
 
     <!--Favicon-->
-    <link rel="icon" href="images/favicon.png" type="image/x-icon">
+    <link rel="icon" href="{% static 'circled-logo.png' %}" type="image/x-icon">
 
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
