--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -11,11 +11,11 @@
             </div>
             <div class="col-md-4 top-social text-lg-right text-md-center">
                 <ul class="unstyled">
-                    <li> <a title="Facebook" href="#"> <span class="social-icon"><i class="fa fa-facebook"></i></span>
+                    <li> <a title="Facebook" href="https://web.facebook.com/byosehano"> <span class="social-icon"><i class="fa fa-facebook"></i></span>
                         </a> <a title="Twitter" href="#"> <span class="social-icon"><i class="fa fa-twitter"></i></span>
                         </a> <a title="Linkdin" href="#"> <span
-                                class="social-icon"><i class="fa fa-linkedin"></i></span> </a> <a title="Rss" href="#">
-                            <span class="social-icon"><i class="fa fa-rss"></i></span> </a> <a title="Skype" href="#">
+                                class="social-icon"><i class="fa fa-linkedin"></i></span> </a> <a title="Rss" href="https://byosehano.com/feed" target="_blank">
+                            <span class="social-icon"><i class="fa fa-rss"></i></span> </a> <a title="Instagram" href="https://instagram.com/byosehano" target="_blank">
                             <span class="social-icon"><i class="fa fa-instagram"></i></span> </a> </li>
                 </ul>
             </div>
