--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <section class="utf_featured_post_area no-padding">
     <div class="container">
         <div class="row">
-            <div class="col-lg-7 col-md-12 d-md-none d-lg-block" id="slider">
+            <div class="col-lg-7 col-md-12 d-md-none d-lg-block hidden-xs-up" id="slider">
                 <div id="utf_featured_slider" class="owl-carousel owl-theme utf_featured_slider">
 
                     {% for post in posts|slice:":4" %} 
