--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,8 +9,13 @@
     <title>Byosehano :: Amakuru - Menya byinshi igihe nyacyo ::</title>
 
     <!--Favicon-->
-    <link rel="icon" href="{% static 'circled-logo.png' %}" type="image/x-icon">
-
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'site.webmanifest' %}">
+    <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg' %}" color="#e7851b">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -19,19 +24,6 @@
     <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171717652-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-171717652-1');
-    </script>
-    <!--well -->
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Arimo:400,700&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800&amp;display=swap" rel="stylesheet">
@@ -50,7 +42,19 @@
         <!-- Javascript Files -->
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/custom.js' %}"></script>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-171717652-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
 
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
+
+            gtag('config', 'UA-171717652-1');
+        </script>
+        <!--well -->
     </div>
 </body>
 
