--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,8 +6,6 @@
     <meta name="description" content="">
     <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menya byinshi igihe nyacyo</title>
-
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
@@ -16,6 +14,27 @@
     <link rel="mask-icon" href="{% static 'safari-pinned-tab.svg' %}" color="#e7851b">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <script data-ad-client="ca-pub-3242762948116825" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    {% block metadatas %}
+      <!-- Primary Meta Tags -->
+        <title>Amakuru - Menya byinshi kugihe</title>
+        <meta name="title" content="Amakuru - Menya byinshi kugihe">
+        <meta name="description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye">
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website">
+        <meta property="og:url" content="https://byosehano.com/">
+        <meta property="og:title" content="Amakuru - Menya byinshi kugihe">
+        <meta property="og:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye">
+        <meta property="og:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:url" content="https://byosehano.com/">
+        <meta property="twitter:title" content="Amakuru - Menya byinshi kugihe">
+        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye">
+        <meta property="twitter:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
+    {% endblock metadatas %}
     <!-- CSS -->
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
