--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -14,7 +14,7 @@
       <meta property="og:url" content="https://byosehano.com/">
       <meta property="og:title" content="{{ post.category.name }} - {{ post.title }}">
       <meta property="og:description" content="{{ post.body|safe|slice:':100' }}">
-      <meta property="og:image" content="https://byosehano.com{{ post.get_absolute_url }}">
+      <meta property="og:image" content="https://byosehano.com{{ post.thumbnail.url }}">
 
       <!-- Twitter -->
       <meta property="twitter:card" content="summary_large_image">
