--- a/templates/layout.html
+++ b/templates/layout.html
@@ -18,20 +18,20 @@
       <!-- Primary Meta Tags -->
         <title>Amakuru - Menya byinshi kugihe</title>
         <meta name="title" content="Amakuru - Menya byinshi kugihe">
-        <meta name="description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye">
+        <meta name="description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://byosehano.com/">
         <meta property="og:title" content="Amakuru - Menya byinshi kugihe">
-        <meta property="og:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye">
+        <meta property="og:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
         <meta property="og:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
 
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image">
         <meta property="twitter:url" content="https://byosehano.com/">
         <meta property="twitter:title" content="Amakuru - Menya byinshi kugihe">
-        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye">
+        <meta property="twitter:description" content="Byosehano ni urubuga rukugezaaho amakuru atandukanye anjyanye n'ubuzima,politiki,imikino,imyidagaduro,ibyamamare,ikoranabuhanga,sobanukirwa nibindi byinshi bitandukanye.">
         <meta property="twitter:image" content="https://byosehano.com{% static 'apple-touch-icon.png' %}">
     {% endblock metadatas %}
     <!-- CSS -->
